rgw: adjust the request_uri to support absoluteURI of http request

http://tracker.ceph.com/issues/12917 Fixes: #12917

Signed-off-by: Wenjun Huang <wenjunhuang@tencent.com>